# ChangeLog for dev-ada/gtkada
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ada/gtkada/ChangeLog,v 1.27 2007/09/10 13:38:04 george Exp $

  10 Sep 2007; <portage-cvs@gentoo.org> gtkada-2.8.0.ebuild,
  gtkada-2.10.0.ebuild:
  fixed the ADA_INCLUDE_PATH to point to correct dir. Thanks to Maxim Reznik
  for spotting this

  28 May 2007; George Shapovalov <george@gentoo.org> gtkada-2.8.0.ebuild:
  backported some enhancements from 2.10.0

*gtkada-2.10.0 (28 May 2007)

  28 May 2007; George Shapovalov <george@gentoo.org> gtkada-2.8.0.ebuild,
  +gtkada-2.10.0.ebuild:
  added new version

  27 May 2007; George Shapovalov <george@gentoo.org> gtkada-2.8.0.ebuild:
  fixed prestripping libs, added ~ppc to KEYWORDS as previous version 
  was already keyworded

*gtkada-2.8.0 (27 May 2007)

  27 May 2007; George Shapovalov <george@gentoo.org> +gtkada-2.8.0.ebuild:
  new version (#174307)

  08 Apr 2007; Joseph Jezak <josejx@gentoo.org> gtkada-2.4.0-r2.ebuild:
  Marked ~ppc for bug #172416.

  26 Jan 2007; Marius Mauch <genone@gentoo.org> gtkada-2.2.0-r1.ebuild,
  gtkada-2.2.1.ebuild, gtkada-2.2.1-r1.ebuild, gtkada-2.4.0.ebuild:
  Replacing einfo with elog

  18 Nov 2006; George Shapovalov <george@gentoo.org> gtkada-2.4.0-r2.ebuild:
  corrected SRC_URI to use the right mirror:// syntax

  13 Nov 2006; George Shapovalov <george@gentoo.org>
  -gtkada-2.4.0-r1.ebuild, gtkada-2.4.0-r2.ebuild:
  removed pkg_postinst (a standard one is in the gnat.eclass) and the -r1
  revision

*gtkada-2.4.0-r2 (12 Jun 2006)

  12 Jun 2006; George Shapovalov <george@gentoo.org>
  +gtkada-2.4.0-r2.ebuild:
  added LDPATH as per discussion in #111340
  some cosmetic touches + removed debug einfo's

*gtkada-2.4.0-r1 (25 May 2006)

  25 May 2006; George Shapovalov <george@gentoo.org>
  +files/gtkada-2.4.0.patch, +gtkada-2.4.0-r1.ebuild:
  moved gtkada to new eclass, first release suppporting split compilers.
