@@ -1,6 +1,10 @@
 # ChangeLog for dev-ada/gtkada
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ada/gtkada/ChangeLog,v 1.27 2007/09/10 13:38:04 george Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ada/gtkada/ChangeLog,v 1.28 2007/09/24 22:17:04 george Exp $
+
+  24 Sep 2007; <portage-cvs@gentoo.org> gtkada-2.4.0-r2.ebuild,
+  gtkada-2.8.0.ebuild, gtkada-2.10.0.ebuild:
+  adjusted ebuilds in line with eclass changes (gnat_src_unpack was factored out)
 
   10 Sep 2007; <portage-cvs@gentoo.org> gtkada-2.8.0.ebuild,
   gtkada-2.10.0.ebuild:
